tests/ui/errors/snapshots/parse_map_literal_int_keys.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `Map` initialization
   ╭─[test.lis:3:31]
 2 │ fn test() {
 3 │   let m: Map<int, string> = { 1: "a", 2: "b" }
   ·                               ┬
   ·                               ╰── invalid syntax
 4 │ }
   ╰────
  help: To initialize a `Map`, use `Map.new<K, V>()` then `m[key] = value` · code: [parse.invalid_map_initialization]
