tests/ui/errors/snapshots/parse_match_arm_block_missing_comma.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:6:5]
 5 │       let _ = 10
 6 │     }
   ·     ┬
   ·     ╰── missing comma after match arm
 7 │     2 => {
   ╰────
  help: Match arms must be separated by commas, even when the body is a block · code: [parse.match_arm_missing_comma]
