tests/ui/errors/snapshots/parse_match_arm_missing_comma.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:12]
 3 │   match x {
 4 │     1 => 10
   ·            ▲
   ·            ╰── expected `,` or `}`
 5 │     2 => 20,
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
