tests/ui/errors/snapshots/parse_misplaced_interface_in_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn main() {
 3 │   interface Greeter {
   ·   ────┬────
   ·       ╰── misplaced
 4 │     fn greet() -> string
   ╰────
  help: Move this interface definition to the top level of the file · code: [parse.syntax_error]
