tests/ui/errors/snapshots/parse_misplaced_type_args_on_type_not_method.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Misplaced type argument
   ╭─[test.lis:3:17]
 2 │ fn main() {
 3 │   let x = Slice<int>.new()
   ·                 ─┬─
   ·                  ╰── belongs on `new`
 4 │ }
   ╰────
  help: Set the type argument on the method: `Slice.new<int>()` · code: [parse.syntax_error]
